--- a/.github/workflows/rust-ci.yml
+++ b/.github/workflows/rust-ci.yml
@@ -8,6 +8,11 @@ on:
         branches:
             - main
 
+defaults:
+  run:
+    working-directory: hello-world
+
+
 jobs:
     build:
         runs-on: ubuntu-latest
